10-sample-app-react-and-nodejs/kubernetes/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
